# imgui-cpp-starter

./: .gitignore  CMakeDeps.cmake  CMakeLists.txt  CMakePresets.json  README.md
include/: README.md
lib/: README.md
src/: README.md  main.cpp
src/imgui_app/: CMakeLists.txt  imgui_app.h  imgui_app_glfw.cpp  imgui_app_sdl.cpp
src/imgui_demo/: CMakeLists.txt  imgui_demo.h  imgui_demo_glfw.cpp  imgui_demo_sdl.cpp
src/version/: CMakeLists.txt
src/version_info/: CMakeLists.txt  README.md  version_info.cpp.in  version_info.h
test/: README.md
tool/: README.md  ubuntu_24_install_requirements
toolchain/: README.md  linux.cmake  mingw.cmake  windows.cmake
